# lang

./: CMakeLists.txt  README.md  package.mojo  wand.mojo
.wand/: config.yaml
cpp/include/mojo/lang/: data_type.hpp  data_visit_handler_adaptor.hpp  dictionary_type.hpp  enum_type.hpp  object.hpp  source_file.mojo.hpp
docs/: ast_samples.md
document/mojo/core/: version.md
document/mojo/document/: document.md
document/mojo/lang/: apply_expr.md  argument.md  array_literal_expr.md  attribute.md  attribute_alias_decl.md  attribute_decl.md  binary_expr.md  block_comment.md  block_stmt.md  bool_literal_expr.md  cached_document.md  closure_expr.md  comment.md  conditional_expr.md  constructor_decl.md  control_transfer_stmt.md  decl.md  declaration.md  dictionary_literal_expr.md  discard_assignment_expr.md  document.md  empty_stmt.md  entity_edge.md  entity_edges.md  entity_node.md  entity_relation.md  entity_relation_set.md  entity_relations.md  entity_relationship.md  enum_decl.md  enum_type.md  error_expr.md  explicit_member_expr.md  expr.md  expression.md  float_literal_expr.md  for_stmt.md  function_call_expr.md  function_decl.md  function_signature.md  (+55 more)
document/mojo/lang/dictionary_literal_expr/: entry.md
document/mojo/lang/document/: line.md
document/mojo/lang/function-decl/: signature.md
document/mojo/lang/function-signature/: parameter.md  result.md
document/mojo/lang/function_decl/: signature.md
document/mojo/lang/map-literal-expr/: entry.md
document/mojo/lang/object-literal-expr/: field.md
document/mojo/lang/object_literal_expr/: field.md
document/mojo/lang/package/: author.md  requirement.md
document/mojo/lang/requirement/: version.md
go/: go.mod  go.sum
go/pkg/lang/: declaration.go  declaration.pb.go  declaration_test.go  document.pb.go  enum_decl.go  expression.go  expression.pb.go  import_decl.pb.go  lang.pb.go  nominal_type.go  package.go  package.pb.go  package_decl.pb.go  package_requirement_version.go  package_requirement_version_test.go  position.pb.go  referenced_package.go  scope.go  scope_getter.go  scope_setter.go  source_file.pb.go  statement.go  statement.pb.go  type.go  type.pb.go  type_declaration.go
go/pkg/mojo/lang/: apply_expr.pb.go  argument.go  arguments.go  arguments_test.go  (+126 more)
include/mojo/lang/: attribute.hpp  attribute.mojo.hpp  callable.hpp  data_adaptor.hpp  data_adaptor_of.hpp  data_decl.mojo.hpp  data_type.hpp  data_types.hpp  data_visitor.hpp  decl.mojo.hpp  declaration.mojo.hpp  enum_decl.mojo.hpp  enum_type.hpp  enum_type_builder.hpp  enum_type_of.hpp  expression.mojo.hpp  func_decl.mojo.hpp  func_type.mojo.hpp  function.hpp  generic_type.hpp  interface_method.hpp  interface_type.hpp  interface_type_builder.hpp  nominal_type.mojo.hpp  numeric_type.hpp  package.hpp  package.mojo.hpp  position.mojo.hpp  service_method.hpp  service_type.hpp  service_type_builder.hpp  service_type_of.hpp  source_file.hpp  statement.mojo.hpp  string_adaptor.hpp  string_type.hpp  struct_adaptor.hpp  struct_decl.mojo.hpp  struct_decl_builder.hpp  struct_field.hpp  (+12 more)
mojo/: .package.mojo  attribute.mojo  constant.mojo  data_type.mojo  expression.mojo  meta.mojo  package.mojo  position.mojo  service_type.mojo  source_file.mojo
mojo/lang/: .package.mojo  apply_expr.mojo  argument.mojo  array_literal_expr.mojo  assign_expr.mojo  attribute.mojo  attribute_decl.mojo  binary_expr.mojo  block_stmt.mojo  bool_literal_expr.mojo  branch_stmt.mojo  break_stmt.mojo  collection_expr.mojo  collection_literal_expr.mojo  comment.mojo  const_decl.mojo  constant.mojo  constant_decl.mojo  constructor_decl.mojo  continue_stmt.mojo  control_transfer_stmt.mojo  data_decl.mojo  data_type.mojo  decl.mojo  decl_group.mojo  declaration.mojo  dictionary_expr.mojo  dictionary_literal_expr.mojo  document.mojo  empty_stmt.mojo  entity_edge.mojo  entity_node.mojo  entity_relationship.mojo  enum_decl.mojo  enum_type.mojo  error_stmt.mojo  explicit_cast_expr.mojo  expr.mojo  expression.mojo  float_literal_expr.mojo  (+70 more)
mojo/lang/ast/: declaration.mojo  expression.mojo  statement.mojo
openapi/mojo/core/: version.schema.json
openapi/mojo/lang/: apply_expr.schema.json  argument.schema.json  array_literal_expr.schema.json  assignment_expr.schema.json  attribute.schema.json  attribute_alias_decl.schema.json  attribute_decl.schema.json  binary_expr.schema.json  block_comment.schema.json  block_stmt.schema.json  bool_literal_expr.schema.json  branch_stmt.schema.json  break_stmt.schema.json  cached_document.schema.json  checked_cast_expr.schema.json  closure_expr.schema.json  comment.schema.json  conditional_expr.schema.json  constant_decl.schema.json  constructor_decl.schema.json  continue_stmt.schema.json  control_transfer_stmt.schema.json  decl.schema.json  declaration.schema.json  dictionary_literal_expr.schema.json  document.schema.json  dynamic_lookup_expr.schema.json  empty_stmt.schema.json  entity_edge.schema.json  entity_edges.schema.json  entity_node.schema.json  entity_relation.schema.json  entity_relation_set.schema.json  entity_relations.schema.json  entity_relationship.schema.json  enum_decl.schema.json  enum_type.schema.json  error_expr.schema.json  error_stmt.schema.json  explicit_cast_expr.schema.json  (+82 more)
protobuf/mojo/lang/: apply_expr.proto  assign_expr.proto  block_stmt.proto  bool_literal_expr.proto  branch_stmt.proto  break_stmt.proto  cached_document.proto  comment.proto  continue_stmt.proto  control_transfer_stmt.proto  decl.proto  declaration.proto  document.proto  empty_stmt.proto  error_expr.proto  error_stmt.proto  explicit_cast_expr.proto  expr.proto  expression.proto  float_literal_expr.proto  function_call_expr.proto  if_expr.proto  implicit_member_expr.proto  import.proto  import_decl.proto  integer_literal_expr.proto  interpolated_string_literal_expr.proto  is_expr.proto  lambda_expr.proto  lang.proto  literal_expr.proto  loop_stmt.proto  null_literal_expr.proto  numeric_literal_expr.proto  operator.proto  package.proto  package_decl.proto  paren_expr.proto  parenthesized_expr.proto  pattern.proto  (+13 more)
src/: mojo.cpp
src/mojo/lang/: numeric_type.cpp
(+272 files in other folders)
